--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,48 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "name": "Bilibili直播弹幕插件",
+  "version": "1.0.0",
+  "description": "用于在Bilibili直播页面发送弹幕及代码",
+  "manifest_version": 3,
+  "icons": {
+    "48": "icon-48.png"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "matches": [
+        "http://live.bilibili.com/*",
+        "https://live.bilibili.com/*"
+      ],
+      "js": [
+        "inject.js"
+      ],
+      "run_at": "document_end"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "permissions": [
+    "tabs",
+    "storage",
+    "webRequest",
+    "cookies",
+    "activeTab",
+    "scripting"
+  ],
+  "host_permissions": [
+    "http://*/**",
+    "https://*/**",
+    "https://api.live.bilibili.com/**"
+  ],
+  "externally_connectable": {
+    "matches": [
+      "http://*/**",
+      "https://*/**"
+    ]
+  },
+  "action": {
+    "default_icon": "icon.png",
+    "default_popup": "index.html",
+    "default_title": "发送弹幕"
+  }
 }
